# clinic-lab

./: .gitignore  README.md
ClinicManager/: .gitignore  CMakeLists.txt  JUSTIFICACION.md  README.md  main.cpp
ClinicManager/docs/: ARQUITECTURA.md  ENUNCIADO_Y_CUMPLIMIENTO.md  GUIA_COMPILACION.md  GUIA_USO.md  JUSTIFICACION_TECNICA.md
ClinicManager/resources/: resources.qrc  styles.qss
ClinicManager/resources/styles/: theme.qss
ClinicManager/src/: main.cpp
ClinicManager/src/algorithms/searching/: BinarySearch.h  LinearSearch.h
ClinicManager/src/algorithms/sorting/: BubbleSort.h  InsertionSort.h  QuickSort.h  SelectionSort.h
ClinicManager/src/core/: ClinicDataStore.cpp  ClinicDataStore.h  DataConsistencyValidator.cpp  DataConsistencyValidator.h  EventLog.cpp  EventLog.h  JsonPersistence.cpp  JsonPersistence.h  SystemAudit.cpp  SystemAudit.h
ClinicManager/src/core/benchmarks/: SearchBenchmark.cpp  SearchBenchmark.h  SortBenchmark.cpp  SortBenchmark.h
ClinicManager/src/core/generators/: DataGenerator.cpp  DataGenerator.h
ClinicManager/src/core/models/: Consulta.cpp  Consulta.h  Diagnostico.cpp  Diagnostico.h  Patient.cpp  Patient.h
ClinicManager/src/core/structures/: DiagnosisTree.cpp  DiagnosisTree.h  PriorityQueue.cpp  PriorityQueue.h  SearchAlgorithms.cpp  SearchAlgorithms.h
ClinicManager/src/data_structures/: DiagnosisTree.cpp  DiagnosisTree.h  HashTable.h  PriorityQueue.h
ClinicManager/src/gui/: AttentionQueueWidget.cpp  AttentionQueueWidget.h  AuditWidget.cpp  AuditWidget.h  DashboardWidget.cpp  DashboardWidget.h  DiagnosisTreeWidget.cpp  DiagnosisTreeWidget.h  EventLogWidget.cpp  EventLogWidget.h  MainWindow.cpp  MainWindow.h  PerformanceLabWidget.cpp  PerformanceLabWidget.h  RecordsSearchWidget.cpp  RecordsSearchWidget.h
ClinicManager/src/gui/delegates/: HighlightDelegate.cpp  HighlightDelegate.h
ClinicManager/src/gui/widgets/: ChartWidget.cpp  ChartWidget.h  DiagnosisTreeWidget.cpp  DiagnosisTreeWidget.h  PatientTableWidget.cpp  PatientTableWidget.h
ClinicManager/src/gui/windows/: MainWindow.cpp  MainWindow.h  PerformanceLabWindow.cpp  PerformanceLabWindow.h
ClinicManager/src/models/: Consulta.cpp  Consulta.h  Diagnostico.cpp  Diagnostico.h  Paciente.h
ClinicManager/src/modules/: Module1_AttentionQueue.cpp  Module1_AttentionQueue.h  Module2_RecordsSearch.cpp  Module2_RecordsSearch.h  Module3_DiagnosisTree.cpp  Module3_DiagnosisTree.h  Module4_PerformanceLab.cpp  Module4_PerformanceLab.h
ClinicManager/src/utils/: CSVExporter.cpp  CSVExporter.h  CostaRicanData.cpp  CostaRicanData.h  DataGenerator.cpp  DataGenerator.h  GraphPlotter.h  PerformanceMeter.cpp  PerformanceMeter.h  TimerUtils.cpp  TimerUtils.h
ClinicManager/tests/: test_structures.cpp
